# moe-flavors

./: .gitignore  README.md  ds_zero2.json  ds_zero3.json  pyproject.toml
handoff/: 01-research-directions.md  02-results.md  03-hypotheses.md  04-next-steps.md  05-sweep-results.md  06-training-setup.md  07-eval-setup.md  08-training-setup-small.md  09-loss-math.md  README.md
scripts/: analyze_boundary_alignment.py  analyze_expert_specialization.py  analyze_gate_weights.py  compute_eci_metrics.py  create_dataset.py  dataset_stats.py  e2e_chunk_deepseek_style.sh  e2e_chunk_long_segments.sh  e2e_deepseek_baseline.sh  e2e_finetune_qwen_long.sh  e2e_finetune_qwen_moe.sh  e2e_hf_analysis.sh  e2e_multi_task.sh  e2e_plain_moe.sh  e2e_qwen_moe_combined.sh  e2e_routing_analysis.sh  e2e_temporal.sh  e2e_temporal_deepseek_style.sh  e2e_temporal_learnable_N.sh  e2e_temporal_long_segments.sh  e2e_temporal_no_reg.sh  e2e_temporal_qwen_long.sh  e2e_temporal_qwen_moe.sh  e2e_vanilla.sh  e2e_vanilla_deepseek_style.sh  e2e_vanilla_supervised.sh  eval_baseline.sh  eval_harness.py  eval_harness.sh  eval_lm_harness.py  eval_soft_cache.py  extract_routing_vectors.py  finetune_moe.py  finetune_moe_controller.py  finetune_moe_grpo.py  finetune_moe_reinforce.py  finetune_moe_sft.py  finetune_qwen_moe.py  job.sh  moe_chunking.sh  (+25 more)
scripts/cluv/: README.md  _eval_lm_harness_run.sh  _eval_soft_cache_run.sh  common.sh  eval_lm_harness.sh  eval_soft_cache.sh  fir_job.sh  narval_job.sh  nibi_job.sh  rorqual_job.sh  tamia_job.sh  train_cache_sft.sh  train_controller_baseline.sh  train_sft_baseline.sh  train_temporal_moe.sh  vulcan_job.sh
src/: cache_reinforce.py  chunk_moe.py  deepseek_moe.py  temporal_moe.py  temporal_moe_wrapper.py  vanilla_moe.py
