[project]
name = "moe-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "matplotlib>=3.10.9",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "wandb>=0.18.0",
]
