[project]
name = "moe-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "lm-eval>=0.4.0",
    "matplotlib>=3.10.9",
    "peft>=0.15.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "trl>=1.9.0",
    "wandb>=0.18.0",
]

[tool.cluv]
# Default sbatch job script, used by any cluster that doesn't set its own
# job_script_path below (mila, killarney, trillium, trillium-gpu).
job_script_path = "scripts/job.sh"
# Where to store job results by default. Can be overridden per cluster.
results_path = "$SCRATCH/logs/cluv"
# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"
## Where to read the data from when synchronizing data to all clusters.
#data_source = "mila:/network/datasets/cifar10.var/cifar10_torchvision"
## Where the dataset should be replicated on all clusters.
#datasets_path = "$SCRATCH/datasets/cifar10"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIMELIMIT = "3:00:00"
SBATCH_REQUEUE = "1"
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE="1"
WANDB_MODE="offline"


###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = {UV_OFFLINE="0", WANDB_MODE="online"}

[tool.cluv.clusters.tamia]
# H100 80GB (H200 also available), whole-node-only, 4 GPUs/node.
job_script_path = "scripts/cluv/tamia_job.sh"

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
results_path = "$HOME/logs/cluv"
# datasets_path = "$HOME/datasets/cifar10"

[tool.cluv.clusters.vulcan]
# L40S 48GB, 4 GPUs/node.
job_script_path = "scripts/cluv/vulcan_job.sh"

[tool.cluv.clusters.rorqual]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}
# H100 80GB, 4 GPUs/node.
job_script_path = "scripts/cluv/rorqual_job.sh"

[tool.cluv.clusters.fir]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}
# H100 80GB, 4 GPUs/node.
job_script_path = "scripts/cluv/fir_job.sh"

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}
# H100 80GB, 4 GPUs/node.
job_script_path = "scripts/cluv/nibi_job.sh"

[tool.cluv.clusters.trillium]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium-gpu]
env = {SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
env = {SBATCH_ACCOUNT="def-bengioy"}
# A100 40GB, 4 GPUs/node.
job_script_path = "scripts/cluv/narval_job.sh"
